# dynata-rex-grpc-client

./: CMakeLists.txt  README.MD  definition.proto  main.cpp  update_definition_proto.sh
examples/: read.php
files/: dynata-rex-grpc-client.service  server.conf
src/appio/: InputHandler.cpp  InputHandler.h  OutputHandler.cpp  OutputHandler.h
src/config/: config.h
src/daemonize/: daemonize.cpp  daemonize.h
src/grpc/: grpcAuth.cpp  grpcAuth.h  grpcClient.cpp  grpcClient.h
src/grpc/proto/: definition.grpc.pb.cc  definition.grpc.pb.h  definition.pb.cc  definition.pb.h
src/ipc/: UDSServer.cpp  UDSServer.h
src/queue/: locked_queue.h
src/timer/: timed_waiter.h
